--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/@material/layout-grid/dist/mdc.layout-grid.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
