--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^6.1.0",
     "@material/layout-grid": "^0.34.0",
     "core-js": "^2.5.4",
+    "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
