--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^6.1.0",
     "@material/layout-grid": "^0.34.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "ng-circle-progress": "^1.2.0",
     "normalize.css": "^8.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
